- Configuration API
 - dnr:SparqlDataset and dnr:usingDataset properties
 - All new IGenericIOManager implementations - Fuseki, In-Memory and Read-Only - are now loadable via the ConfigurationLoader
 - dnr:enableCors property for disabling CORS Headers on HTTP Handlers
- Query
 - GROUP BY is now supported in subqueries
 - Scalar Arguments for aggregates added when in 1.1 Extended mode (only GROUP_CONCAT allows scalar arguments in 1.1 mode)
 - Added new SPARQL 1.1 functions
  - String Functions - CONCAT, CONTAINS, ENCODE_FOR_URI, LCASE, STRENDS, STRLEN, STRSTARTS, SUBSTR, UCASE
  - Date Time Functions - DAY, HOURS, MINUTES, MONTH, NOW, SECONDS, TIMEZONE, TZ and YEAR
  - Numeric Functions - ABS, CEIL, FLOOR, ROUND and ISNUMERIC
  - Hash Functions - MD5, SHA1, SHA256, SHA384, SHA512
- Update
 - Added support for HTTP PATCH operation to SPARQL Uniform HTTP Protocol implementations
- Storage
 - Expanded the IGenericIOManager interface to include methods for deletings graphs and listing graphs
 - Connector for Fuseki
 - Connector which wraps an in-memory store (i.e. a IInMemoryQueryableStore) or a SPARQL dataset (i.e. a ISparqlDataset)
 - Connector which wraps any IGenericIOManager and makes it read-only
- New HtmlSchemaWriter outputs HTML versions of ontologies in a schema specification style rather than as a table like the existing HtmlWriter

Changed
- Bug Fixes
 - Notation 3 Parser allows variable quantification directives in Graph Literals
 - Queries with a LIMIT modifier containing FILTERs were optimised for lazy evaluation but would return incorrect results
   in some cases
 - Queries with a DISTINCT modifer and a LIMIT were optimised for lazy evaluation when they shouldn't have been
 - Queries containing GRAPH clauses no longer unintentionally introduce a Product in some places
 - RDF/XML parser now correctly treats empty elements with rdf:datatype as literal properties rather than empty properties