@@ -124,7 +124,6 @@
   <ItemGroup>
     <Compile Include="GraphDiffTests.cs" />
     <Compile Include="Sparql\AlgebraReverseTranslation.cs" />
-    <Compile Include="Sparql\GroupByAssignment.cs" />
     <Compile Include="Storage\AllegroGraphTests.cs" />
     <Compile Include="Configuration\ConfigurationApiTests.cs" />
     <Compile Include="Storage\FourStoreTest.cs" />
