@@ -30,6 +30,7 @@ Added
  - dnr:enableCors property for disabling CORS Headers on HTTP Handlers
 - Query
  - GROUP BY is now supported in subqueries
+ - GROUP BY (?x AS ?y) now supported
  - Scalar Arguments for aggregates added when in 1.1 Extended mode (only GROUP_CONCAT allows scalar arguments in 1.1 mode)
  - Added new SPARQL 1.1 functions
   - String Functions - CONCAT, CONTAINS, ENCODE_FOR_URI, LCASE, STRENDS, STRLEN, STRSTARTS, SUBSTR, UCASE
